# private-state-manager

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yml  deploy.yaml
crates/client/: Cargo.toml  build.rs
crates/client/proto/: state_manager.proto
crates/client/src/: client.rs  error.rs  lib.rs  transaction.rs
crates/client/src/auth/: miden_ecdsa.rs  miden_falcon_rpo.rs  mod.rs
crates/client/src/masm/: mod.rs
crates/client/src/testing/: client_tests.rs  mocks.rs
crates/contracts/: Cargo.toml
crates/contracts/masm/auth/: psm.masm  psm_ecdsa.masm
crates/contracts/src/: masm_builder.rs  multisig_psm.rs
crates/contracts/tests/auth/: multisig.rs
crates/miden-keystore/: Cargo.toml
crates/miden-keystore/src/: ecdsa_keystore.rs  error.rs  fs_keystore.rs  lib.rs
crates/miden-multisig-client/: Cargo.toml  README.md
crates/miden-multisig-client/examples/: procedure_roots.rs
crates/miden-multisig-client/src/: account.rs  builder.rs  config.rs  error.rs  execution.rs  export.rs  keystore.rs  lib.rs  payload.rs  procedures.rs  proposal.rs  sync.rs
crates/miden-multisig-client/src/client/: account.rs  helpers.rs  io.rs  mod.rs  notes.rs  offline.rs  proposals.rs
crates/miden-multisig-client/src/transaction/: builder.rs  configuration.rs  consume.rs  mod.rs  payment.rs  psm.rs
crates/miden-multisig-client/src/transaction/configuration/: config.rs  mod.rs  signature.rs
crates/miden-rpc-client/: Cargo.toml
crates/server/: Cargo.toml  README.md  build.rs  diesel.toml  test-e2e.sh  verify-build-hash.sh
crates/server/bench/: README.md
crates/server/bench/config/: common.env  fs.env  postgres.env  profiles.toml
crates/server/bench/k6/: body_limit.js  rate_limit.js
crates/server/bench/loadgen/: Cargo.toml
crates/server/bench/loadgen/src/: config.rs  main.rs  report.rs  scenarios.rs
crates/server/bench/reports/: 2026-02-15.md
crates/server/bench/scripts/: collect_pg_metrics.sh  collect_server_metrics.sh  generate_report.sh  lib.sh  preflight.sh  run_fs.sh  run_matrix.sh  run_postgres.sh  run_postgres_auth_compare.sh  run_postgres_canonicalization.sh  run_postgres_state_sync.sh  summarize.sh
crates/server/bench/sql/: pg_stat_snapshot.sql
crates/server/migrations/2026-01-01-000001_initial_schema/: down.sql  up.sql
crates/server/proto/: state_manager.proto
crates/server/src/: builder.rs  canonicalization.rs  config.rs  delta_object.rs  error.rs  lib.rs  logging.rs  main.rs  schema.rs  state.rs  state_object.rs
crates/server/src/ack/: mod.rs
crates/server/src/ack/miden_ecdsa/: mod.rs  signer.rs
crates/server/src/ack/miden_falcon_rpo/: signer.rs
crates/server/src/api/: grpc.rs  http.rs
crates/server/src/auth/: miden_falcon_rpo.rs  mod.rs
crates/server/src/builder/: clock.rs  handle.rs  mod.rs  state.rs  storage.rs
crates/server/src/grpc/: mod.rs
crates/server/src/handlers/: configure.rs  get_delta.rs  get_delta_head.rs  get_state.rs  mod.rs  push_delta.rs
crates/server/src/http/: mod.rs
crates/server/src/jobs/canonicalization/: processor.rs  worker.rs
crates/server/src/metadata/: filesystem.rs  mod.rs  postgres.rs
crates/server/src/metadata/auth/: miden_ecdsa.rs  miden_falcon_rpo.rs  mod.rs
crates/server/src/middleware/: mod.rs  rate_limit.rs
crates/server/src/network/: miden.rs  mod.rs
crates/server/src/network/miden/: mod.rs
crates/server/src/services/: canonicalize.rs  common.rs  configure_account.rs  delta_commit.rs  get_delta.rs  get_delta_head.rs  get_delta_proposals.rs  get_delta_since.rs  get_latest_nonce.rs  get_state.rs  mod.rs  payload_normalize.rs  push_delta.rs  push_delta_proposal.rs  sign_delta_proposal.rs
crates/server/src/services/canonicalization/: mod.rs  processor.rs
crates/server/src/signing/: mod.rs
crates/server/src/signing/miden_falcon_rpo/: keystore.rs  signer.rs
crates/server/src/storage/: filesystem.rs  mod.rs  postgres.rs
crates/server/src/testing/: generate_fixtures.rs  helpers.rs  mocks.rs  mod.rs
crates/server/src/testing/e2e/: canonicalization.rs  configure_account.rs  delta_proposals.rs  mod.rs  psm_signature.rs
crates/server/src/testing/fixtures/: account.json  commitments.json  delta_1.json  delta_2.json  delta_3.json
crates/server/src/testing/integration/: auth_grpc.rs  auth_http.rs  miden_rpc_integration.rs  mod.rs  proposals_grpc.rs  proposals_http.rs
crates/server/tests/: canonicalization_lifecycle_test.rs  e2e_grpc_auth_test.rs  e2e_http_auth_test.rs  miden_rpc_integration_test.rs  utils.rs  verify-build-hash.sh
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  hex.rs  lib.rs
docs/: MULTISIG_SDK.md  SERVER_AWS_DEPLOY.md
examples/: README.md  custom_logging.rs
examples/demo/: .gitignore  Cargo.toml  README.md
examples/demo-interactive/src/: account_inspector.rs  actions.rs  display.rs  falcon.rs  main.rs  menu.rs  multisig.rs  pending_tx.rs  state.rs
examples/demo/src/: display.rs  main.rs  menu.rs  state.rs
examples/demo/src/actions/: create_account.rs  list_notes.rs  mod.rs  proposal_management.rs  pull_deltas_from_psm.rs  show_account.rs  show_status.rs  sync_account.rs
examples/rust/: Cargo.toml  README.md
examples/rust/src/: falcon.rs  main.rs  main_mockchain.rs  miden_helpers.rs  multisig.rs
examples/web/: .env.example  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/web/src/: App.tsx  config.ts  index.css  main.tsx
examples/web/src/components/: CreateMultisigDialog.tsx  CreateProposalForm.tsx  Header.tsx  LoadMultisigDialog.tsx  MultisigDashboard.tsx  ProposalCard.tsx  WelcomeView.tsx  index.ts
examples/web/src/hooks/: useMidenWallet.ts  useParaSession.ts
examples/web/src/lib/: errors.ts  helpers.ts  initClient.ts  multisigApi.ts
examples/web/src/types/: index.ts  (+1 more)
scripts/: aws-deploy.sh
spec/: api.md  components.md  index.md  processes.md
src/: main.rs
src/account/: add_component.rs  mod.rs  noop_auth_component.rs
templates/: basic-auth.mct  basic-fungible-faucet.mct  basic-wallet.mct
(+2 files in other folders)
