[package]
name = "private-state-manager-client"
version = "0.1.0"
edition = "2024"

[dependencies]
private-state-manager-shared = { path = "../shared" }
miden-objects = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
miden-rpc-client = { path = "../miden-rpc-client" }
miden-keystore = { path = "../miden-keystore" }
miden-lib = { workspace = true }
rand_chacha = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }