[package]
name = "private-state-manager-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client library for Private State Manager"
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
private-state-manager-shared = { version = "0.13.0", path = "../shared" }
miden-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
miden-rpc-client = { path = "../miden-rpc-client" }
miden-keystore = { path = "../miden-keystore" }
miden-standards = { workspace = true }
rand_chacha = { workspace = true }
tempfile = { workspace = true }
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build = { workspace = true }