[package]
name = "miden-confidential-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Miden multisig smart contract accounts"
default-run = "miden-confidential-contracts"

[dependencies]
miden-standards = { workspace = true }
miden-protocol = { workspace = true }
miden-tx = { workspace = true }
miden-testing = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "fs"] }
private-state-manager-shared = { version = "0.13.0", path = "../shared" }

[dev-dependencies]
miden-client = { workspace = true, features = ["testing", "tonic"] }

rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
assert_matches = { workspace = true }
