[package]
name = "miden-multisig-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level SDK for interacting with multisig accounts on Miden via PSM"

[dependencies]
# Internal crates
private-state-manager-client = { path = "../client" }
private-state-manager-shared = { path = "../shared" }
miden-confidential-contracts = { path = "../contracts" }

# Miden
miden-client = { workspace = true, features = ["tonic", "testing"] }
miden-client-sqlite-store = { workspace = true }
miden-objects = { workspace = true }
miden-tx = { workspace = true }
miden-lib = { workspace = true }

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
