[package]
name = "miden-multisig-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level SDK for interacting with multisig accounts on Miden via PSM"

[dependencies]
# Internal crates
private-state-manager-client = { version = "0.13.0", path = "../client" }
private-state-manager-shared = { version = "0.13.0", path = "../shared" }
miden-confidential-contracts = { version = "0.13.0", path = "../contracts" }

# Miden
miden-client = { workspace = true, features = ["tonic", "testing"] }
miden-client-sqlite-store = { workspace = true }
miden-protocol = { workspace = true }
miden-tx = { workspace = true }
miden-standards = { workspace = true }

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
