[package]
name = "miden-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-objects = { workspace = true }
miden-node-proto = { workspace = true }
tonic = { workspace = true, features = ["tls-native-roots", "tls-ring", "transport"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
hex = { workspace = true }
