[package]
name = "private-state-manager-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8.6"
chrono = "0.4"
hex = "0.4"
serde = "1.0.228"
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
miden-objects = { version = "0.11.4", features = ["testing"] }

# shared
private-state-manager-shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = "0.5"
uuid = { version = "1.0", features = ["v4"] }

# Reproducible build configuration
[build]
incremental = false

[profile.release]
strip = true
lto = true
codegen-units = 1

# Remap source paths to make builds independent of the build directory
[target.'cfg(all())']
rustflags = [
    "--remap-path-prefix", "/app=.",
    "--remap-path-prefix", "$HOME=~",
]
