[package]
name = "private-state-manager-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8.6"
chrono = "0.4"
hex = "0.4"
serde = "1.0.228"
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.13"
tonic-reflection = "0.13"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
miden-objects = { version = "0.11.4", features = ["testing"] }
miden-rpc-client = { path = "../miden-rpc-client" }
miden-lib = "0.11.4"

# shared
private-state-manager-shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tower = "0.5"
uuid = { version = "1.0", features = ["v4"] }
miden-lib = "0.11.4"
base64 = "0.22"
hex = "0.4"
