[package]
name = "private-state-manager-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8.6"
base64 = { workspace = true }
chrono = "0.4"
hex = { workspace = true }
rand = "0.9"
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-reflection = "0.14"
prost = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
miden-objects = { workspace = true, features = ["testing"] }

# internal crates
private-state-manager-shared = { path = "../shared" }
miden-keystore = { path = "../miden-keystore" }
miden-rpc-client = { path = "../miden-rpc-client" }

# Postgres storage
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json"], optional = true }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"], optional = true }
diesel_migrations = { version = "2.2", optional = true }

# Optional dependencies for e2e tests
miden-client = { workspace = true, features = ["testing"], optional = true }
miden-confidential-contracts = { path = "../contracts", optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tower = "0.5"
uuid = { version = "1.0", features = ["v4"] }
miden-lib = { workspace = true }

[features]
default = []
postgres = ["diesel", "diesel-async", "diesel_migrations"]
integration = []
e2e = ["miden-client", "miden-confidential-contracts"]
