[package]
name = "psm-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
miden-multisig-client = { path = "../../crates/miden-multisig-client" }

miden-client = { workspace = true, features = ["tonic", "testing"] }
miden-objects = { workspace = true }

tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
rustyline = "13.0"
