[package]
name = "psm-rust-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
private-state-manager-client = { path = "../../crates/client" }
private-state-manager-shared = { path = "../../crates/shared" }

# Miden client for transaction execution and proving
miden-client = { workspace = true, features = ["tonic"] }
miden-client-sqlite-store = { workspace = true }
# NamedSource is not exported by miden_client, so we need miden_objects directly
miden-objects = { workspace = true }
miden-tx = { workspace = true }

tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
